--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth/pg-adapter": "^1.4.2",
     "@auth/prisma-adapter": "^2.4.2",
     "@prisma/client": "^5.18.0",
+    "@react-three/fiber": "^8.17.5",
     "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -22,13 +23,18 @@
     "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-typed": "^2.0.12",
+    "three": "^0.167.1",
+    "three-stdlib": "^2.32.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.14.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-typing-effect": "^2.0.7",
+    "@types/three": "^0.167.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
