--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-typed": "^2.0.12",
     "three": "^0.167.1",
