--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
@@ -26,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-typed": "^2.0.12",
+    "tailwind-merge": "^2.5.2",
     "three": "^0.167.1",
     "three-stdlib": "^2.32.2"
   },
