--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "prisma": "^5.18.0",
     "tailwindcss": "^3.4.9",
     "ts-node": "^10.9.2",
