--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-typed": "^2.0.12",
     "tailwind-merge": "^2.5.2",
     "three": "^0.167.1",
-    "three-stdlib": "^2.32.2"
+    "three-stdlib": "^2.32.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -38,6 +39,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-typing-effect": "^2.0.7",
     "@types/three": "^0.167.1",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
