--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.2.1",
     "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
+    "next-client-cookies": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
